<resources>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_confirm_login">Confirm Login</string>
    <string name="button_cancel_login">Cancel Login</string>
    <string name="button_confirm_signup">Confirm Sign Up</string>
    <string name="button_cancel_signup">Cancel Sign Up</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading_text_str">加载中，请稍后...</string>
    <string name="scan_title">二维码扫描</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="state">状态</string>
    <string name="app_picker_name">应用</string>
    <string name="app_name">宁光手持式采集系统</string>
    <string name="compay_name">宁夏隆基宁光仪表股份有限公司</string>
    <string name="alarm_management">报警管理</string>
    <string name="content_report">系统设置</string>
    <string name="system_management">系统设置</string>
    <string name="sys_set">系统设置</string>
    <string name="entry">数据查看</string>
    <string name="data_entry">数据录入</string>
    <string name="back_btn">返回</string>
    <string name="scan_btn">扫描</string>
    <string name="upload_btn">全部上传</string>
    <string name="submit_btn">提交</string>
    <string name="ok_btn">确定</string>
    <string name="today">今天</string>
    <string name="cur_week">本周</string>
    <string name="cancel_str">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="day_tian">天</string>
    <string name="latitude_longitude">度</string>
    <string name="label_shidu">％</string>
    <string name="label_wendu">°C</string>
    <string name="mhz">Hz</string>
    <string name="vol">m³</string>
    <string name="click_line_hard">点击连接设备</string>
    <string name="sugar_test_plug">伴随状态</string>
    <string name="input_mark">点击输入备注</string>
    <string name="mark">备注</string>
    <string name="connecting">正在连接设备</string>
    <string name="normal">正常</string>
    <string name="ci_unit">次</string>
    <string name="week">周</string>
    <string name="cache_sycn">缓存同步</string>
    <string name="check_all">全选</string>
    <string name="device_name">设备名称</string>
    <string name="device_addr">设备地址</string>
    <string name="user_self">自定义方案</string>
    <string name="new_str">新</string>
    <string name="add_equip">设备输入</string>
    <string name="input_handle">手工输入</string>
    <string name="test_plan">检测计划</string>
    <string name="test_equip">设备列表</string>
    <string name="bleupload">蓝牙抄表数据上传</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechatpay">微信支付</string>
    <string name="maplocation">地图定位</string>
    <string name="queryinfo">信息查询</string>
    <string name="hisinfo">历史信息查询</string>
    <string name="errorinfo">故障信息查询</string>
    <string name="readingtask">任务查询</string>
    <string name="toast_label">提示</string>
    <string name="toast_time_after">时间还没到呢，生活很美好，咱不急！</string>
    <string name="alarm_def_title">来自隆基宁光的提醒</string>
    <string name="alarm_content">时间到了快干活</string>
    <string name="alarm_default_time">1970-01-01 09:00</string>
    <string name="login">用户登录</string>
    <string name="nameinput_tip">输入用户名</string>
    <string name="pswinput_tip">输入密码</string>
    <string name="metertype_tip">选择表类型</string>
    <string name="forgetpsw">忘记密码？</string>
    <string name="forgetpsw_title">忘记密码</string>
    <string name="findpsw">找回密码</string>
    <string name="check_tip">输入验证码</string>
    <string name="phoneNumber">86+ 请输入手机号</string>
    <string name="truelogin">确认登录</string>
    <string name="get_validation_code">获取验证码</string>
    <string name="bluth_open">正在打开蓝牙设备</string>
    <string name="connect_device">连接设备</string>
    <string name="get_result">读取数据中</string>
    <string name="step6">已获取数据</string>
    <string name="manage_user">用户管理</string>
    <string name="personal_data">个人资料</string>
    <string name="done">完成</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="nick_name">昵称</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>
    <string name="nothing">无</string>
    <string name="unlimited">不限</string>
    <string name="logout">注销登录</string>
    <string name="loging_out">正在注销&#8230;</string>
    <string name="logout_success">注销成功</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="wrong_format">用户名或密码格式错误</string>
    <string name="wrong_input">用户名或密码错误</string>
    <string name="wrong_connection">连接失败，请检查网络</string>
    <string name="user_notfound">用户不存在</string>
    <string name="info_illformat">输入的参数有误</string>
    <string name="modify_psw_success">修改密码成功</string>
    <string name="modify_success">修改成功</string>
    <string name="user_unlogin">登录过期，请重新登录</string>
    <string name="request_error">请求失败，请返回重新操作</string>
    <string name="server_error">请求失败啦，请稍后重新操作</string>
    <string name="logout_label">注销</string>
    <string name="exit_login">退出登录</string>
    <string name="editing_member">正在修改数据&#8230;</string>
    <string name="get_uinfo">正在获取个人信息&#8230;</string>
    <string name="get_ulist">正在获取成员列表&#8230;</string>
    <string name="setting_master">正在设置主成员&#8230;</string>
    <string name="deleting_user">正在删除成员&#8230;</string>
    <string name="adding_user">正在添加成员&#8230;</string>
    <string name="update_ulist_success">更新列表成功</string>
    <string name="set_master_success">设置主成员成功</string>
    <string name="add_user_success">添加成员成功</string>
    <string name="del_user_success">删除成员成功</string>
    <string name="readdata">抄实时数据</string>
    <string name="zhdl">磊</string>
    <string name="swichpower">开关阀</string>
    <string name="recharge">充值</string>
    <string name="system">设置</string>
    <string name="alarm_view">报警查看</string>
    <string name="alarmdetail_view">报警设置明细</string>
    <string name="alarm_setting">报警设置</string>
    <string name="now_status">当前状态</string>
    <string name="video_viewing">视频查看</string>
    <string name="storage_id">仓库名称</string>
    <string name="max_value">最高温度</string>
    <string name="mix_value">最低温度</string>
    <string name="max_shidu">最高湿度</string>
    <string name="min_shidu">最低湿度</string>
    <string name="shidu">当前湿度</string>
    <string name="wendu">当前温度</string>
    <string name="eat_plan_title">报警及参数管理</string>
    <string name="parameter_view">参数查看</string>
    <string name="input_hint">点击输入</string>
    <string name="slect_hint">点击选择</string>
    <string name="storage_content">存放内容</string>
    <string name="storage_add">冷库新增</string>
    <string name="medicine_num">冷库容积</string>
    <string name="storage_capacity">冷库容积</string>
    <string name="administrators">管理员</string>
    <string name="label_latitude">经度</string>
    <string name="label_longitude">纬度</string>
    <string name="cubic_metre">m³</string>
    <string name="medicine_toast">提醒</string>
    <string name="data_input">项目录入</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="out_date">已过期</string>
    <string name="next_btn">下一项</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检测更新</string>
    <string name="help_us">帮助</string>
    <string name="report_us">意见反馈</string>
    <string name="official_news">公告信息</string>
    <string name="alarm_toast">暂无</string>
    <string name="normal_question">常见问题</string>
    <string name="read_cur_water_info">抄读气表当前用气信息</string>
    <string name="read_cur_water_price_info">抄读气表当前价格信息</string>
    <string name="read_real_time_water_status">抄读气表实时状态</string>
    <string name="read_cur_gas_info">抄读气表当前用气信息</string>
    <string name="read_cur_gas_price_info">抄读气表当前价格信息</string>
    <string name="read_real_time_gas_status">抄读气表实时状态</string>
    <string name="read_data_in_concentrator">抄读集中器中数据</string>
    <string name="read_data_in_meter">抄读表中的数据</string>
    <string name="read_data_freezing_data">抄读日冻结数据</string>
    <string name="read_data_freezing_month_data">抄读月冻结数据</string>
    <string name="read_freezing_settlement_data">抄读结算日冻结数据</string>
    <string name="g_unian">克</string>
    <string name="clock">闹钟</string>
    <string name="blood_unit">mmol/L</string>
    <string name="user_name">用户名</string>
    <string name="middle_user_level">中级用户</string>
    <string name="start_check">初步：</string>
    <string name="check_sub">诊断：</string>
    <string name="check_doctor">诊断人：</string>
    <string name="x">X</string>
    <string name="action_settings">Settings</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="stop_device_scan">Stop Device Scan</string>
    <string name="connect_failed">Connect Failed</string>
    <string name="bluetooth_manager_initialization_failed">Bluetooth Manager Initialization failed</string>
    <string name="unable_to_obtain_adapter">Unable to obtain a BluetoothAdapter.</string>
    <string name="adapter_uninitialized">BluetoothAdapter not initialized</string>
    <string name="device_unspecified">The device was unspecified</string>
    <string name="device_not_found">Device not found</string>
    <string name="no_gatt_info">No GATT information</string>
    <string name="service_not_found">Service not found</string>
    <string name="characteristic_not_found">Characteristic not found</string>
    <string name="descriptor_not_found">Descriptor not found</string>
    <string name="read_descriptor_failed">Read Descriptor failed</string>
    <string name="set_notification_failed">Set characteristic notification failed</string>
    <string name="write_characteristic_failed">Write characteristic failed</string>
    <string name="disconnected">disconnected</string>
    <string name="disconnecting">disconnecting</string>
    <string name="read_characteristic_failed">Read Characteristic failed</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_go_text">Sign In</string>
    <string name="create_account_text">Create Account</string>
    <string name="camera">Camera</string>
    <string name="manual_measurement">Manual Measurement</string>
    <string name="capture">Capture</string>
    <string name="capture_title">Capture</string>
    <string name="history">History</string>
    <string name="equipment">Equipment</string>
    <string name="workorders">Work Orders</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="signout">Sign Out</string>
    <string name="signout_confirm_message">Are you sure you want to sign out?</string>
    <string name="service_discovery_error" formatted="false">Failed to discover services for %s, status = %d</string>
    <string name="retry" formatted="false">Retrying %d</string>
    <string name="retry_failed">Retry failed</string>
    <string name="alphabetical">A-Z</string>
    <string name="equipment_type">Type</string>
    <string name="equipment_location">Location</string>
    <string name="equipment_status">Status</string>
    <string name="thermal_imager">Thermal Imager</string>
    <string name="assign_equipment">Assign Equipment</string>
    <string name="assign_work_order">Assign Work Order</string>
    <string name="note_hint">Add Text Note</string>
    <string name="adminster_login_str">管理员登陆</string>
    <string name="new_user_register">新用户注册</string>
    <string name="mobile_phone_registration">手机号注册</string>
    <string name="input_validation_code">请输入验证码</string>
</resources>