<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ee_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/page_title"
        android:layout_width="fill_parent" >

        <Button
            android:id="@+id/back_btn"
            style="@style/back_button_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/back_btn" />

        <TextView
            style="@style/page_title_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mobile_phone_registration" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/encode_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dip"
            android:layout_marginRight="43dip"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dip">

                <EditText
                    android:id="@+id/phone_uname"
                    style="@style/login_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@mipmap/phonnumber"
                    android:hint="@string/phoneNumber"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="11" />

                <ImageView
                    android:id="@+id/name_right_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/phone_uname"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@id/phone_uname"
                    android:paddingRight="10dip" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_center_divider_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dip">

                <EditText
                    android:id="@+id/regist_psw"
                    style="@style/login_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@mipmap/login_psw"
                    android:hint="@string/pswinput_tip"
                    android:inputType="textPassword"
                    android:maxLength="11" />

                <ImageView
                    android:id="@+id/psw_right_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/regist_psw"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@id/regist_psw"
                    android:src="@mipmap/login_psw_show" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_center_divider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="18dip"
                android:padding="5dp">

                <EditText
                    android:id="@+id/input_code"
                    style="@style/button_style"
                    android:layout_width="0dp"
                    android:layout_height="45dip"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:background="@drawable/target_btn_bg_login"
                    android:hint="@string/input_validation_code"
                    android:textColorHint="@color/grey_300"
                    android:textSize="16sp"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:id="@+id/get_code"
                    style="@style/button_user_regist"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="45dip"
                    android:text="@string/get_validation_code"
                    android:textColor="@color/encode_view"
                    android:layout_marginLeft="6dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/login_true"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dip"
                android:background="@drawable/target_btn_bg"
                android:text="@string/truelogin"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>