<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/page_title"
        android:layout_width="fill_parent">

        <Button
            android:id="@+id/back_btn_upload"
            style="@style/back_button_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/back_btn" />

        <TextView
            style="@style/page_title_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/bleupload" />

        <Button
            android:id="@+id/btn_upload_all"
            style="@style/btn_upload_all_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:text="@string/upload_btn" />

        <Button
            android:id="@+id/btn_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="删除"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <TextView
        style="@style/date_show"
        android:id="@+id/texttip"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbar"
        android:gravity="center"
        android:text=""
        android:textColor="#fff" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/t01"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:text="表地址"/>
        <TextView
            android:id="@+id/t02"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="操作项"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="时间"/>
        <TextView
            android:id="@+id/t04"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="操作人"
            android:visibility="gone"/>
    </RelativeLayout>
    <GridView
        android:id="@+id/grid1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="1dp"
        android:verticalSpacing="1dp"
        android:gravity="center"
        android:background="#DCDCDC">
    </GridView>
</LinearLayout>