<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/page_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/page_title_height">

        <Button
            android:id="@+id/back_btn"
            style="@style/back_button_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@null"
            android:text="@string/back_btn" />

        <TextView
            android:id="@+id/title"
            style="@style/page_title_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/readdata" />


        <ImageButton
            android:id="@+id/btn_options"
            style="@style/button_style"
            android:layout_width="@dimen/page_title_height"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:src="@mipmap/sugar_entry_list" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/effect_title"
            android:padding="9dip"
            android:text="@string/now_status"
            android:textColor="@color/news_title"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dip"
            android:paddingRight="8dip">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/main_divider_line" />
            <!--表号输入框-->
            <RelativeLayout
                android:id="@+id/meterAddrs"
                style="@style/medicine_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="表地址："
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/meter_addr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="点击输入"
                        android:maxLength="12" />

                </LinearLayout>


            </RelativeLayout>



            <Button
                android:id="@+id/btn_ok"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="changeButtonColor"
                android:text="抄表" />
            <Button
                android:id="@+id/btn_okTest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="changeButtonColor"
                android:text="磊" />
            <!--显示-->
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/main_divider_line" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/itemlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:cacheColorHint="#00000000"
                android:descendantFocusability="blocksDescendants"
                android:divider="@mipmap/divider"
                android:dividerHeight="0.8dip"
                android:fadingEdge="none"
                android:fastScrollEnabled="false"
                android:listSelector="@color/transparent"
                android:scrollingCache="false" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>